--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@types/node": "^8.0.53",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
+    "mocha": "^4.1.0",
     "react-scripts-ts": "2.8.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
+    "test": "mocha",
     "eject": "react-scripts-ts eject"
   }
 }
